gcc/testsuite/gdc.test/fail_compilation/fail3673b.d
class A {}
class B : if(false) A { }
